--- a/CriminalIntent/AndroidManifest.xml
+++ b/CriminalIntent/AndroidManifest.xml
@@ -20,6 +20,10 @@
         <activity
             android:name="com.sk.criminalintent.CrimePagerActivity"
             android:label="@string/app_name" >
+            <meta-data 
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".CrimeListActivity"
+                />
         </activity>
         
          <activity
